# E-commerce-management-platform

./: CMakeLists.txt  README.md  mindmap.km
data/: account.txt  apply.txt  bills.txt  goodslist.txt
inc/: account.h  app.h  linkedList.h  m_account.h  main.h
src/: accoumt.c  app.c  linkedList.c  m_accoumt.c  main.c
